# CallMiner

./: .gitignore  .pre-commit-config.yaml  LICENSE
BEServer/: .env_example  Dockerfile  README.md  docker-compose.yaml  requirements.txt
BEServer/be/: celery_app.py  config.py  db.py  main.py  models.py  schemas.py  tasks.py
BEServer/be/internal/: azure_utils.py
BEServer/be/routers/: persons.py
K8sCluster/scripts/: setup.sh
MLFlowServer/: docker-compose.yaml
MLFlowServer/MLFlow/: Dockerfile  requirements.txt
MLFlowServer/Nginx/: mlflow.conf
MLServer/: .env_example  Dockerfile  README.md  docker-compose.yml  fetch_env.sh  register_model.sh
MLServer/Models/ASR/: Dockerfile  model.py  (+6 more)
WebServer/: .env_example  Dockerfile  README.md  docker-compose.yaml  mypy.ini  requirements.txt
WebServer/mongo-seed/: seed.js
WebServer/tests/: test_ner.py
WebServer/webapp/: celery_app.py  errors.py  main.py
app/: .env.example  Dockerfile  README.md  docker-compose.yaml  go.mod  main.go  main.py  pyproject.toml  requirements.txt
app/handlers/: dashboard.go  transcript.go
app/models/: transcript.go  transcript.py
app/public/css/: styles.css
app/routers/: dashboard.py  transcript.py
app/src/: main.py
app/src/models/: agent.py  azure.py  db.py  transcript.py
app/src/routers/: __init__.py  dashboard.py  transcript.py
app/src/routers/api/: __init__.py  agent.py
app/src/tasks/: __init__.py
app/src/views/: layout.html.jinja2
app/views/: layout.html.jinja2  layout.templ  layout_templ.go  transcript.html.jinja2  transcript.templ  transcript_templ.go
(+90 files in other folders)
