[tool.poetry]
name = "callminer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = {extras = ["standard"], version = "^0.112.0"}
jinja2 = "^3.1.4"
celery = "^5.4.0"
redis = "^5.0.8"
azure-storage-blob = "^12.22.0"
motor = "^3.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
